bugfix: layout: add z-index to header

--- a/src/app/_core/layout/main-layout/main-layout.component.scss
+++ b/src/app/_core/layout/main-layout/main-layout.component.scss
@@ -9,6 +9,7 @@
 .main-layout__header {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .main-layout__content {
